cmake_minimum_required(VERSION 3.12)
project(Sofa.Component.Container LANGUAGES CXX)

set(SOFACOMPONENTCONTAINER_SOURCE_DIR "src/sofa/component/container")

set(HEADER_FILES
    ${SOFACOMPONENTCONTAINER_SOURCE_DIR}/config.h.in
    ${SOFACOMPONENTCONTAINER_SOURCE_DIR}/init.h
    ${SOFACOMPONENTCONTAINER_SOURCE_DIR}/MechanicalObject.h
    ${SOFACOMPONENTCONTAINER_SOURCE_DIR}/MechanicalObject.inl
    ${SOFACOMPONENTCONTAINER_SOURCE_DIR}/MappedObject.h
    ${SOFACOMPONENTCONTAINER_SOURCE_DIR}/MappedObject.inl
)

set(SOURCE_FILES
    ${SOFACOMPONENTCONTAINER_SOURCE_DIR}/init.cpp
    ${SOFACOMPONENTCONTAINER_SOURCE_DIR}/MappedObject.cpp
    ${SOFACOMPONENTCONTAINER_SOURCE_DIR}/MechanicalObject.cpp
)

sofa_find_package(Sofa.SimulationCore REQUIRED)

add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} PUBLIC Sofa.SimulationCore)

sofa_create_package_with_targets(
    PACKAGE_NAME ${PROJECT_NAME}
    PACKAGE_VERSION ${Sofa_VERSION}
    TARGETS ${PROJECT_NAME} AUTO_SET_TARGET_PROPERTIES
    INCLUDE_SOURCE_DIR "src"
    INCLUDE_INSTALL_DIR "${PROJECT_NAME}"
)
